clusters/agora-k3s/default/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  labels:
    name: longhorn-ingress
  namespace: longhorn-system
spec:
  rules:
  - host: longhorn.jegyrendszer.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  labels:
    name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.jegyrendszer.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-release-kube-pr-prometheus
            port: 
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  labels:
    name: grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.jegyrendszer.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-release-grafana
            port: 
              number: 80
---
